Fix misalignment on head with span text

--- a/src/components/mdTable/mdTable.scss
+++ b/src/components/mdTable/mdTable.scss
@@ -59,6 +59,7 @@
   .md-table-head-text {
     height: 28px;
     line-height: 28px;
+    display: inline-block;
   }
 
   .md-sortable {
